# reviewAI

./: .env.example  .gitignore  README.md  pyproject.toml
src/reviewai/: __init__.py  app.py  config.py  errors.py  logger.py  routes.py  server.py
src/reviewai/handlers/: health.py  playground.py  review_analysis.py
src/reviewai/middleware/: __init__.py  logging.py  request_context.py
src/reviewai/schemas/: api.py
src/reviewai/services/: __init__.py  analyzer.py  model_adapter.py
src/reviewai/static/: playground.html
src/reviewai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analyze_review.py  test_config.py  test_health.py  test_model_adapter_smoke.py  test_validation.py
